[ci] Enable libgcuniversal in build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,6 +44,7 @@ jobs:
                 theos-branch: 'main'
                 sdks-src: 'waruhachi/sdks'
                 sdks-branch: 'main'
+                libgcuniversal: true
                 libgcuniversal-src: 'waruhachi/libgcuniversal'
                 libgcuniversal-branch: 'main'
 
